--- a/test.html
+++ b/test.html
@@ -85,7 +85,8 @@
 <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">置頂</button>
 
-    <h1>實驗室</h1>
+    <h1>實驗室1234567890</h1>
+
     <table>
         <tr>
             <td><a href="#teacher">指導老師</a></td>
